brat/test/golden/error/badvec3.brat
v3 :: Vec(Int,0)
v3 = cons(1, nil)
