brat/test/golden/error/badvec3.brat.golden
Error in test/golden/error/badvec3.brat on line 2:
v3 = cons(1, nil)
     ^^^^^^^^^^^^

  Expected vector of length 0
from the type:  Vec(Int, 0)
but got vector: [1]
of length (> 0)


